cmake_minimum_required(VERSION 3.15)
project(Clion_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Clion_C__ main.cpp)
add_executable(test test.cpp)
add_executable(Curriculum 4.cpp)

add_executable(asd asd.cpp)
add_executable(3 3.cpp)
add_executable(2 2.cpp)
add_executable(1 1.cpp)
add_executable(01 cmake-build-debug/01.cpp)
add_executable(5 5.cpp)
add_executable(matrix matrix.cpp)
add_executable(Binary_tree Binary_tree.cpp)
add_executable(6 6.cpp)
add_executable(201909_4 201909_4.cpp)
add_executable(testtest testtest.cpp)
add_executable(201909_2 201909_2.cpp)
add_executable(201312_4 201312_4.cpp)
add_executable(201909_5 201909_5.cpp)
add_executable(201903_4 201903_4.cpp)
add_executable(Tree Tree.cpp)
add_executable(201812_4 201812_4.cpp)
add_executable(testgit testgit.cpp)