cmake_minimum_required(VERSION 3.15)
project(Clion_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Clion_C__ main.cpp)
add_executable(test test.cpp)
add_executable(Curriculum 4.cpp)

add_executable(asd asd.cpp)
add_executable(3 3.cpp)
add_executable(2 2.cpp)
add_executable(1 1.cpp)
add_executable(01 cmake-build-debug/01.cpp)
add_executable(5 5.cpp)
add_executable(matrix matrix.cpp)
add_executable(Binary_tree Binary_tree.cpp)
add_executable(6 6.cpp)
add_executable(201909_4 201909_4.cpp)
add_executable(testtest testtest.cpp)
add_executable(201909_2 201909_2.cpp)
add_executable(201312_4 201312_4.cpp)
add_executable(201909_5 201909_5.cpp)
add_executable(201903_4 201903_4.cpp)
add_executable(Tree Tree.cpp)
add_executable(201812_4 201812_4.cpp)
add_executable(testgit testgit.cpp)
add_executable(another test "another test.cpp")
add_executable(OJ1696 OJ1696.cpp)
add_executable(S2Q3 S2Q3.cpp)
add_executable(2wuxiangwang 2wuxiangwang.cpp)
add_executable(1youxiangtu 1youxiangtu.cpp)
add_executable(7 7.cpp)
add_executable(S3Q5 S3Q5.cpp)
add_executable(8 8.cpp)
add_executable(01.BST 01.BST.cpp)
add_executable(02.sort 02.sort.cpp)
add_executable(5.4 5.4.cpp)
add_executable(BST BST.cpp)
add_executable(sort sort.cpp)
add_executable(X_1 X_1.cpp)
add_executable(X_2 X_2.cpp)
add_executable(X_4 X_4.cpp)
add_executable(PCA PCA.cpp)
add_executable(X_5 X_5.cpp)